healt_center_web_page/deployment_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healt-center-web-page-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: eeg-app
      component: healt-center-web-page
  template:
    metadata:
      labels:
        app: eeg-app
        component: healt-center-web-page
    spec:
      containers:
      - name: healt-center-web-page
        image: fberton98/healt_center_web_page:latest
        ports:
        - containerPort: 5000
        resources:
          limits: # max quantity of resources that container can use, otherwise --> throttled
            cpu: 400m
          requests: # guaranteed resources for this container
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: healt-center-web-page-service
  labels:
    app: eeg-app
    component: healt-center-web-page
spec:
  selector:
    app: eeg-app
    component: healt-center-web-page
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
